added more todo list

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,6 @@
+look up computing resources!!!
+a job that should take a second
+
 Stats in Python:
 *t-test
 *std error
@@ -7,7 +10,10 @@ Stats in Python:
 Visualizations:
 *line graphs
 *bar charts
-*heat maps
+*heat maps ---> mutatation rate vs rugedness temp = 
+max fitness at end of a pop
+showing three dimensions 
+
 *3d figures --> contour map embed legends etc... 
 *embed images into figures --> compact figures
 *output visualizations in a variety of formats png, pdf, bmp
@@ -28,4 +34,8 @@ What to add:
 *mean
 *std error population fitness @ every generation (some interval)
 *max fitness over same interval 
+
+*generating data for representation of data 
+*easy ways to specify parameters (mutation rates, starting org etc!)
+*using data well have results.db
 
