--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,28 @@
+Tasks For Next Week:
+===================================================================================
+J^3:
+figure out mutation problem
+
+Joe:
+look up computing resources at UW (thousands of hours not millions)
+determine optimal parameters for rna_organism...
+	-able to imporve
+	-able to get close to the optimum
+	-alot of variance in the outcome
+	-some runs do well and some make it 
+	-for both structured and unstructured populations 
+	-#deems and migration rate...heat map
+	-
+
+Josh:
+look up commercial cloud options 
+write up a peristence module ...
+
+
+Jared: 
+lazy nk_table 
+
+====================================================================================
 look up computing resources!!!
 a job that should take a second
 
