--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,13 @@
+List of Dependancies for EC2
+===================================================================================
+sudo apt-get install git 
+git clone ****
+sudo apt-get install make
+sudo apt-get install build-essential 
+sudo apt-get install python-pip
+sudo apt-get install python-profiler python-wxgtk2.8 python-setuptools
+make install-dependancies 
+
 Tasks For Next Week:
 ===================================================================================
 J^3:
