--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,8 @@ write up a peristence module ...
 
 
 Jared: 
-Add lineage tracking
+create dictionary lazy lookup
+make up a list of dictionaries
 
 ====================================================================================
 
@@ -42,10 +43,7 @@ What to save:
 *replicate number... - refer to a paticular run...
 
 What to add:
-*mean
 *std error population fitness @ every generation (some interval)
-*max fitness over same interval 
-
 *generating data for representation of data 
 *easy ways to specify parameters (mutation rates, starting org etc!)
 *using data well have results.db
