--- a/todo.txt
+++ b/todo.txt
@@ -14,7 +14,7 @@ Profile lazy lookup (look into None versus to-be-fill dict)
 Shared Amazon Account or Linking together. Finance stuff.
 
 Jared: 
-
+Add random number seeds
 ====================================================================================
 
 Stats in Python:
